# mpi-wrapper-cxx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cl.bat  configure.bat  configure.sh  dependencies.sh
.github/workflows/: main.yaml
demos/: CMakeLists.txt  mpidemo.cpp
demos/helloworld/: CMakeLists.txt  README.md  REAMDE.md  helloworld.cpp
demos/mandelbrot/: CMakeLists.txt  README.md  colours.h  distributed_canvas.h  mandelbrot.cpp  maths.h  settings.h
demos/mandelbrot/data/: grayscale.ini  pastel.ini
demos/mandelbrot/src/: CMakeLists.txt  colours.h  distributed_canvas.cpp  distributed_canvas.h  fileIO.cpp  fileIO.h  mandelbrot.cpp  maths.cpp  maths.h  settings.h
mpicxx/: CMakeLists.txt  README.md  extra_type_traits.h  mpi.h  mpi_base.h  mpi_linux.h  mpi_mock.h  mpicxx.h
mpicxx/common/: communicator.h  defines.h  environment.h  extra_type_traits.h  file.h  types.h
mpicxx/linux/: communicator.h  environment.h  file.h  types.h
mpicxx/mock/: communicator.h  environment.h  file.h  types.h
src/: defines.h  extra_type_traits.h  main.cpp  mpi_interface.cpp  mpi_interface.h
test/: CMakeLists.txt  test.cpp  test_barrier.h  test_broadcast.h  test_gather.h  testutils.h
